style: 💄 创建公共变量和混合元素的文本

--- a/src/containers/index.less
+++ b/src/containers/index.less
@@ -1,17 +1,5 @@
-.left{
-    float: left;
-}
-.right{
-    float: right;
-}
-.clear{
-    clear: both;
-}
-.bg{
-    background:url('//img.alicdn.com/tps/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png') no-repeat;
-    overflow:hidden;
-}
-@color-brown: #987f0f;
+@import "./variables.less";
+
 *{
     box-sizing: border-box;
     margin: 0;
