--- a/src/containers/index.less
+++ b/src/containers/index.less
@@ -26,7 +26,7 @@ body{
     top: 50%;
     left: 50%;
     margin: -480px 0 0 -320px;
-    background-color: #efcc19;
+    background-color: @color-yellow;
 }
 .rect{
     width: 480px;
@@ -43,9 +43,27 @@ body{
     width: 390px;
     height: 478px;
     border:solid 5px;
-    border-color: @color-brown #fae36c #fae36c @color-brown;
+    border-color: @color-brown @color-yellow1 @color-yellow1 @color-brown;
     margin: 0 auto;
     background-color: @color-brown;
     margin: 0 auto;
     position: relative;
+    .panel{
+        width: 380px;
+        height: 468px;
+        margin: 0 auto;
+        padding: 8px;
+        border: 2px solid #494536;
+    }
+}
+.state{
+    width: 108px;
+    position: absolute;
+    top: 0;
+    right: 15px;
+    p{
+        line-height:47px;
+        height: 57px;
+        white-space: nowrap;
+    }
 }
