--- a/src/containers/variables.less
+++ b/src/containers/variables.less
@@ -1,8 +1,18 @@
 @color-brown: #987f0f;
+@color-yellow:#efcc19;
+@color-yellow1:#fae36c;
 .left{float:left};
 .right{float: right;}
 .clear{clear: both;}
 .bg{
     background:url('//img.alicdn.com/tps/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png') no-repeat;
     overflow:hidden;
+}
+.absoulteCenter{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
 }
